--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/mongodb-adapter": "^3.1.0",
     "@nextui-org/navbar": "^2.0.32",
     "@nextui-org/react": "^2.4.1",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.10",
     "mongodb": "^6.6.2",
